# Vociferous

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.json  ARCHITECTURE.md  BATCH_1_SUMMARY.md  CANARY_QWEN_FIX_SUMMARY.md  CHANGELOG.md  CODE_REVIEW.md  Dockerfile  GUI_FUTURE_RECOMMENDATIONS.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_IMPLEMENTATION_SUMMARY_FINAL.md  GUI_VISUAL_GUIDE.md  ISSUES_BATCH_1.md  LICENSE  Makefile  QUICKSTART.md  QUICKSTART_GUI.md  README.md  asr.py  audio.py  chatterbug_design_doc.md  chatterbug_product_vision.md  check_deps.py  config.example.toml  create_batch1_issues.sh  debug_audio.py  debug_vad_timestamps.py  debug_vad_wrapper.py  demo_gui.py  docker-compose.yml  download.py  full_test_run.txt  install.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-windows-cuda.txt  requirements.lock.txt  (+11 more)
.config/: pyrightconfig.json
.github/: copilot-instructions.md
Planning and Documentation/: ARCHITECTURE.md  ChatterBug Architecture and Module Design.md  ChatterBug Data Model Spec.md  ChatterBug Error Handling and Privacy Spec.md  ChatterBug Functional and NFR Specification.md  ChatterBug Interface Contracts.md  ChatterBug Product Design & Requirements.md  ISSUES.md  Polisher_Performance_Report.md  Vociferous Architecture and Module Design.md  Vociferous Data Model Spec.md  Vociferous Error Handling and Privacy Spec.md  Vociferous Functional and NFR Specification.md  Vociferous Interface Contracts.md  Vociferous Product Design & Requirements.md
docs/: ARCHITECTURE.md  ENGINE_BATCH_INTERFACE.md  GUI_FUTURE_RECOMMENDATIONS.md  ISSUES.md  PHASE_TRACKING.md  RUNTIME_ARCHITECTURE_VALIDATION_REPORT.md  Redesign.md  architecture.md  decisions.md  development.md
frontend/: .prettierrc  README.md  index.html  mini.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.js  vite.config.ts
models/: README.md
sample_audio/: ASR_Test_Text.txt
scripts/: QUALITY.md  README.md  benchmark_corpus.json  build_frontend_if_needed.ps1  check.sh  check_deps.py  check_model_arch.py  demo_morphing_blob.py  fix_gpu.sh  install-desktop-entry.sh  install.sh  install_mac.sh  install_mac_shortcut.sh  install_windows.ps1  install_windows_shortcut.ps1  provision_models.py  purge_old_data.sh  refinement_benchmark.py  refinement_probe.py  requirements-windows-cuda.txt  run.py  run_tests.sh  setup_refinement.py  test_blob_import.py  ui_smoke.py  uninstall-desktop-entry.sh  uninstall_mac_shortcut.sh  uninstall_windows_shortcut.ps1  verify_app_boot.py  verify_assets.py  verify_ipc_framing.py  verify_refinement_quality.py  verify_resources.py  verify_ui_colors.py  verify_ui_runtime.py
src/: _version.py  config_schema.yaml  exceptions.py  history_manager.py  input_simulation.py  key_listener.py  main.py  models.py  result_thread.py  transcription.py  utils.py
tests/: __init__.py  conftest.py  test_accessibility.py  test_action_button_fixes.py  test_action_dock_lifecycle.py  test_action_dock_startup_layout.py  test_all_engines.py  test_architecture_contracts.py  test_architecture_guardrails.py  test_audio_chunk.py  test_boot_integrity.py  test_cli_comprehensive.py  test_cli_transcribe.py  test_color_constants.py  test_config.py  test_config_edge_cases.py  test_debug_stdin.py  test_decoder_chunking.py  test_decoder_edge_cases.py  test_docstring_coverage.py  test_domain_constants.py  test_engine_config.py  test_engine_factory.py  test_engine_metadata.py  test_engine_registry.py  test_error_handling.py  test_exceptions.py  test_file_source.py  test_history_manager.py  test_history_storage.py  test_history_utils.py  test_icon_rail_invariants.py  test_input_handler.py  test_input_simulation.py  test_integration.py  test_intent_feedback.py  test_interaction_intents.py  test_invariants_dialogs.py  test_invariants_settings.py  test_key_listener.py  (+53 more)
wiki/: Configuration.md  Development.md  Engines-and-Presets.md  Getting-Started.md  Home.md  How-It-Works.md  README.md  Why-Vociferous.md  _Sidebar.md
(+671 files in other folders)
