[project]
name = "vociferous"
version = "0.0.0"
description = "Local-first ASR with vLLM-backed Whisper and Voxtral engines (accuracy-first, GPU-optimized)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
  "numpy>=1.26.0",
  "faster-whisper>=1.0.0",
  "silero-vad>=5.0",
  "torch>=2.0.0",
  "nvidia-cudnn-cu12>=9.1.0.70",
  "transformers>=4.54.0",
    "mistral-common[audio]>=1.0.0",
  "accelerate>=0.20.0",
  "rich>=13.7.0",
  "sounddevice>=0.4.6",
  "pyperclip>=1.8.2",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.10.0"]
polish = ["llama-cpp-python>=0.3.0", "huggingface_hub>=0.23.0"]

[project.scripts]
vociferous = "vociferous.cli.main:main"

[tool.setuptools]
packages = ["vociferous"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
exclude = ".*(vociferous/tui/|vociferous/polish/).*"

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "vociferous.engines.whisper_turbo",
  "vociferous.engines.whisper_vllm",
  "vociferous.engines.voxtral_vllm",
  "vociferous.engines.voxtral_local",
  "vociferous.audio.vad",
  "vociferous.engines.hardware",
  "vociferous.polish.*",
]
ignore_errors = true

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
