[project]
name = "vociferous"
version = "0.0.0"
description = "Local-first ASR with Canary-Qwen and OpenAI Whisper engines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "structlog>=24.0.0",
  "numpy>=1.26.0",
  "rich>=13.7.0",
  "sounddevice>=0.4.6",
  "pyperclip>=1.8.2",
  "tomli-w>=1.0.0",
  "openai-whisper>=20240930",
  "silero-vad>=5.0",
  "torch>=2.6.0",
  "nemo_toolkit[asr,tts]>=2.1.0",
  "sacrebleu>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.10.0"]
polish = ["llama-cpp-python>=0.3.0", "huggingface_hub>=0.23.0"]
gui = [
  "kivymd>=1.2.0",
  "kivy>=2.3.0",
  "pillow>=10.0.0",
]
cuda = [
  "torch>=2.0.0",
  "nvidia-cudnn-cu12>=9.1.0.70",
]
voxtral = [
  "transformers>=4.54.0",
  "mistral-common[audio]>=1.0.0",
  "accelerate>=0.20.0",
  "torch>=2.0.0",
]

[project.scripts]
vociferous = "vociferous.cli.main:main"
vociferous-gui = "vociferous.gui.app:run_gui"

[tool.setuptools]
packages = ["vociferous"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
exclude = ".*(vociferous/polish/|vociferous/gui/).*"

[[tool.mypy.overrides]]
module = [
  "tests.*",
  "vociferous.engines.whisper_turbo",
  "vociferous.engines.voxtral_local",
  "vociferous.audio.vad",
  "vociferous.engines.hardware",
  "vociferous.polish.*",
  "vociferous.gui.*",
]
ignore_errors = true

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
