[project]
name = "vociferous"
version = "4.0.0-dev"
description = "Linux-native speech-to-text with offline transcription and SLM refinement"
requires-python = ">=3.12"
license = "MIT"

[project.scripts]
vociferous = "src.main:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
namespace_packages = true
files = ["src", "tests"]
exclude = ["scripts", "frontend"]
ignore_missing_imports = true
strict_optional = false
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::FutureWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that test multiple components together",
]
